--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
 .index_page {
     background-color: #7469f0;
     font-size: 35px;
+    margin: 15px;
 }
 .music_page {
     background-color: #6A7BDA;
